# yalland-node

./: .gitignore  Cargo.toml  KEYS_LOCAL.md  Makefile
executor/: Cargo.toml
executor/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs  template.rs
scripts/: grandpa.sh  palm.sh  rotate.sh  run1.sh  run2.sh  run3.sh  yalland-client.sh
src/: chain_spec.rs  cli.rs  main.rs  service.rs
