[workspace]
members = ['runtime']

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc' }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc' }

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.yalland-node-runtime]
path = 'runtime'

[dependencies.sc-basic-authority]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.babe]
package = 'sc-consensus-babe'
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'

[package]
authors = ['Yalland']
build = 'build.rs'
edition = '2018'
name = 'yalland-node'
version = '2.0.0'

[[bin]]
name = 'yalland-node'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '73ae66aeb11f96303283a7ebde58b4849ee1fadc'
