[workspace]
members = ['runtime', 'executor']

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'
hex-literal = "0.2.1"
jsonrpc-core = "14.0.5"

node-executor = { path = './executor' }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", rev = 'a98625501be68cc3084e666497c16b111741dded' }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", rev = 'a98625501be68cc3084e666497c16b111741dded' }
sc-rpc = { package = "sc-rpc", git = "https://github.com/paritytech/substrate", rev = 'a98625501be68cc3084e666497c16b111741dded' }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "a98625501be68cc3084e666497c16b111741dded" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", rev = "a98625501be68cc3084e666497c16b111741dded" }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "a98625501be68cc3084e666497c16b111741dded" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "a98625501be68cc3084e666497c16b111741dded" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "a98625501be68cc3084e666497c16b111741dded" }
node-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "a98625501be68cc3084e666497c16b111741dded" }

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.futures01]
package = 'futures'
version = '0.1.29'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.yalland-node-runtime]
path = 'runtime'

[dependencies.sc-basic-authority]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = 'a98625501be68cc3084e666497c16b111741dded'

[package]
authors = ['Yalland']
build = 'build.rs'
edition = '2018'
name = 'yalland-node'
version = '2.0.0'

[[bin]]
name = 'yalland-node'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = 'a98625501be68cc3084e666497c16b111741dded'
