[workspace]
members = ['runtime', 'executor']

[dependencies]
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = { version = "0.2", features = ["rt-threaded"] }
trie-root = '0.15.2'
hex-literal = "0.2.1"
jsonrpc-core = "14.0.5"

node-executor = { path = './executor' }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", rev = '37be26343ac2f8ac2b692346246b8c7954d79199' }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", rev = '37be26343ac2f8ac2b692346246b8c7954d79199' }
sc-rpc = { package = "sc-rpc", git = "https://github.com/paritytech/substrate", rev = '37be26343ac2f8ac2b692346246b8c7954d79199' }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
pallet-contracts = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
node-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-finality-grandpa'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-finality-grandpa'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.yalland-node-runtime]
path = 'runtime'

[dependencies.sc-basic-authority]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sc-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-consensus]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-consensus-babe]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-core]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-inherents]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-runtime]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[package]
authors = ['Yalland']
build = 'build.rs'
edition = '2018'
name = 'yalland-node'
version = '2.0.0'

[[bin]]
name = 'yalland-node'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3.0.4'

[build-dependencies.build-script-utils]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-build-script-utils'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'
