[package]
name = "node-executor"
version = "2.0.0"
authors = ["Yalland"]
description = "Substrate node implementation in Rust."
edition = "2018"

[dependencies]
yalland-node-runtime = { path = "../runtime" }
codec = { package = "parity-scale-codec", version = "1.1.0" }
primitives = { package = "sp-core", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
runtime_io = { package = "sp-io", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
state_machine = { package = "sp-state-machine", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
trie = { package = "sp-trie", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }

[dev-dependencies]
balances = { package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
contracts = { package = "pallet-contracts", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
indices = { package = "pallet-indices", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
runtime_support = { package = "frame-support", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
system = { package = "frame-system", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
test-client = { package = "substrate-test-client", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
timestamp = { package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
transaction-payment = { package = "pallet-transaction-payment", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
treasury = { package = "pallet-treasury", git = 'https://github.com/paritytech/substrate.git', rev = "a98625501be68cc3084e666497c16b111741dded" }
wabt = "0.9.2"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []
