[package]
name = "node-executor"
version = "2.0.0"
authors = ["Yalland"]
description = "Substrate node implementation in Rust."
edition = "2018"

[dependencies]
yalland-node-runtime = { path = "../runtime" }
codec = { package = "parity-scale-codec", version = "1.1.0" }
primitives = { package = "sp-core", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
runtime_io = { package = "sp-io", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
state_machine = { package = "sp-state-machine", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
trie = { package = "sp-trie", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }

[dev-dependencies]
balances = { package = "pallet-balances", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
contracts = { package = "pallet-contracts", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
indices = { package = "pallet-indices", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
runtime_support = { package = "frame-support", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
system = { package = "frame-system", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
test-client = { package = "substrate-test-client", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
timestamp = { package = "pallet-timestamp", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
transaction-payment = { package = "pallet-transaction-payment", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
treasury = { package = "pallet-treasury", git = 'https://github.com/paritytech/substrate.git', rev = "37be26343ac2f8ac2b692346246b8c7954d79199" }
wabt = "0.9.2"
criterion = "0.3.0"

[features]
wasmtime = [
    "sc-executor/wasmtime",
]
wasmi-errno = [
	"sc-executor/wasmi-errno",
]
stress-test = []
