[package]
authors = ['Yalland']
edition = '2018'
name = 'yalland-node-runtime'
version = '2.0.0'

[features]
default = ['std']
std = [
    'authorship/std',
    'authority-discovery/std',
    'sp-authority-discovery/std',
    'babe/std',
    'babe-primitives/std',
    'balances/std',
    'codec/std',
    "evm/std",
    'finality-tracker/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'im-online/std',
    'indices/std',
    'offences/std',
    'randomness-collective-flip/std',
    'serde',
    'session/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-offchain/std',
    'staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
]

[build-dependencies.wasm-builder-runner]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-wasm-builder-runner'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'
version = '1.0.4'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0", default-features = false, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

# primitives
node-primitives = { git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
sp-authority-discovery = { package = "sp-authority-discovery", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }

# pallets
evm = { package = "pallet-evm", git = "https://github.com/paritytech/substrate.git", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
im-online = { package = "pallet-im-online", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
babe = { package = "pallet-babe", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
session = { package = "pallet-session", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
staking = { package = "pallet-staking", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
authorship = { package = "pallet-authorship", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
offences = { package = "pallet-offences", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
authority-discovery = { package = "pallet-authority-discovery", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
finality-tracker = { package = "pallet-finality-tracker", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199"}

frame-executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
frame-support = { package = "frame-support", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", rev = "37be26343ac2f8ac2b692346246b8c7954d79199", default-features = false }

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'

[dependencies.transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '37be26343ac2f8ac2b692346246b8c7954d79199'
